everything working kind of i fixed the layout gird on smaller screens and all

--- a/static/css/collection.css
+++ b/static/css/collection.css
@@ -138,21 +138,28 @@ h3{
     background-color: #db3c3c;
 }
 
-@media screen and (max-width:600px) {
-    .top_movie_page{
-        display: grid;
-        gap: .05rem;
-        grid-template-columns: minmax(5rem, 900px);
-        grid-auto-rows: minmax(10px, auto);
-        justify-content: space-evenly;
-        align-content: center;
-        margin: 0.5rem;
-        padding: 0.5rem;
+@media screen and (max-width:900px) {
+    .movies_grid{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        flex-basis: content;
+        flex-flow: column;
+        justify-content: left;
+        padding: 0px;
+        margin: 0px;
+        
+    }
+
+    .movies{
+        flex-grow: 1;
     }
 }    
 
 
-@media screen and (max-width:600px) {
+@media screen and (max-width:900px) {
     .top_movie_page{
         margin: 1rem;
         padding: 1rem;
@@ -163,10 +170,11 @@ h3{
         gap: 1rem;
         grid-template-columns: repeat(auto-fit, minmax(9rem, 1fr));
         grid-auto-rows: minmax(80px, auto);
-        justify-content: start ;
+        justify-content: center ;
         align-content: center;
         justify-self: center;
         margin: 1rem;
+        padding-right: 30px;
         
       }
       
@@ -200,9 +208,58 @@ h3{
         justify-content: center;
 
       }
-
-     
-    
-      
-
 }
+
+
+
+@media screen and (max-width:365px) {
+    .top_movie_page{
+        margin: 0.5rem;
+        padding: 0.5rem;
+    }
+
+    .movies_grid{
+        display: grid;
+        gap: 1rem;
+        grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
+        grid-auto-rows: minmax(80px, auto);
+        justify-content: center ;
+        align-content: center;
+        justify-self: center;
+        margin: 1rem;
+        padding-left: 40px;
+        
+      }
+      
+      .movies{
+        display: grid;
+        width: 120px;
+        height: auto;
+        justify-self: space-around;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        padding: 1rem;
+        margin: 2px;
+        padding-bottom: 15px;
+        
+      }
+    
+      .description h2{
+        font-family: 'Oswald', serif;
+        font-size: 25px;
+        margin: 1;
+        font-weight: 100;
+
+        
+      }
+
+      .release_date p{
+        font-family: 'Oswald', serif;
+        font-size: 8px;
+        font-weight: 100;
+        justify-content: center;
+
+      }
+}
+
