--- a/static/css/style.css
+++ b/static/css/style.css
@@ -118,7 +118,6 @@ h2{
 }
 
 
-
 @media screen and (max-width:500px) {
   
 
@@ -131,6 +130,7 @@ h2{
     align-content: center;
     justify-self: center;
     margin: 1rem;
+    padding-left: -10px;
     
   }
   
@@ -139,9 +139,9 @@ h2{
     width: 140px;
     height: auto;
     justify-self: space-around;
-    justify-content: left;
-    align-content: flex-start;
-    align-items: flex-start;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
     padding: 1rem;
     margin: 2px;
     padding-bottom: 15px;
